syntax="proto3";
option go_package="github.com/matizaj/oms/common/api";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns(Order);
}

message CreateOrderRequest {
    string customerId=1;
    repeated ItemsWithQuantity Items=2;    
}
message ItemsWithQuantity {
    string Id=1;
    int32 Quantity=2;
}

message Order {
    string Id =1;
    string CustomerId=2;
    string Status=3;
    repeated Item Items=4;
}

message Item {
    string Id = 1;
    string Name =2;
    int32 Quantity =3;
    string PriceId = 4;
}